--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(EDITORCONFIG "${CMAKE_CURRENT_SOURCE_DIR}/.editorconfig")
 set(EXETYPE)
 
-if(MSVC AND NOT LLVM)
+if(MSVC)
     set(EXETYPE WIN32)
     set(CMAKE_CXX_FLAGS "/W4 /MT /DWIN32 /D_WINDOWS /FAcs /Gy /EHsc /Gs65536 /wd4127")
     set(CMAKE_CXX_FLAGS_MINSIZEREL "/DNDEBUG /MT /O1 /Oi /Os /Oy /GS- /fp:fast /Gr")
@@ -44,6 +44,8 @@ elseif(UNIX)
     set(COMMON_FLAGS "${COMMON_FLAGS} -fomit-frame-pointer")
     set(COMMON_FLAGS "${COMMON_FLAGS} -fno-ident -Qn")
     set(COMMON_FLAGS "${COMMON_FLAGS} -freg-struct-return")
+    set(COMMON_FLAGS "${COMMON_FLAGS} -mpopcnt -msse2 -mavx -mavx2 -mbmi -mbmi2")
+    set(COMMON_FLAGS "${COMMON_FLAGS} -fno-tree-vectorize")
     set(COMMON_FLAGS "${COMMON_FLAGS} -Wall -Wextra")
 
 	if(CMAKE_C_COMPILER_VERSION VERSION_GREATER 6)
