try separating compilation units by acceleration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,17 +8,23 @@ set(EXETYPE)
 
 if(MSVC)
     set(EXETYPE WIN32)
-    set(CMAKE_CXX_FLAGS "/W4 /MT /DWIN32 /D_WINDOWS /FAcs /Gy /EHsc /Gs65536 /wd4127")
+    set(CMAKE_CXX_FLAGS "/W4 /MT /DWIN32 /D_WINDOWS /FAcs /Gy /Gs65536 /wd4127")
+    if("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /arch:SSE2")
+    else()
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /arch:IA32")
+    endif()
     set(CMAKE_CXX_FLAGS_MINSIZEREL "/DNDEBUG /MT /O1 /Oi /Os /Oy /GS- /fp:fast /Gr")
-    set(CMAKE_CXX_FLAGS_RELEASE "/DNDEBUG /MT /Ox /Oi /Ot /Oy /Ob2 /GS- /fp:fast /Gr")
+    set(CMAKE_CXX_FLAGS_RELEASE "/DNDEBUG /MT /Ox /Oi /Ot /Oy /Ob2 /GS- /fp:fast /Gr /GL")
     set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELEASE} /DEBUG /Zi")
     set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS}")
     set(CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL}")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
     set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
     set(CMAKE_EXE_LINKER_FLAGS_MINSIZEREL "/INCREMENTAL:NO")
-    set(CMAKE_EXE_LINKER_FLAGS_RELEASE "/INCREMENTAL:NO")
+    set(CMAKE_EXE_LINKER_FLAGS_RELEASE "/INCREMENTAL:NO /LTCG")
     set(CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO "/INCREMENTAL:NO /DEBUG")
+    set(CMAKE_STATIC_LINKER_FLAGS_RELEASE "/LTCG")
     add_definitions(-D_HAS_EXCEPTIONS=0)
 elseif(UNIX)
 
@@ -87,7 +93,10 @@ endif()
 
 file(GLOB CH_SOURCES "ch/*")
 add_library(ch STATIC ${CH_SOURCES} ${EDITORCONFIG})
-if(UNIX)
+if(MSVC)
+    set_source_files_properties(ch/ch_genmoves_sse.cpp PROPERTIES COMPILE_FLAGS /arch:SSE2)
+    set_source_files_properties(ch/ch_genmoves_avx.cpp PROPERTIES COMPILE_FLAGS /arch:AVX2)
+elseif(UNIX)
     target_compile_options(ch PRIVATE -mssse3 -fno-tree-vectorize)
     target_link_libraries(ch gcc)
 endif()
