--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,7 +96,7 @@ add_executable(test_perft test_perft.cpp ${EDITORCONFIG})
 target_link_libraries(test_perft ch)
 
 add_executable(${PROJECT_NAME}_uci uci.cpp ${EDITORCONFIG})
-target_link_libraries(${PROJECT_NAME}_uci ch)
+target_link_libraries(${PROJECT_NAME}_uci ch pthread)
 
 if(FALSE)
 
