fix all linux warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ elseif(UNIX)
     set(COMMON_FLAGS "${COMMON_FLAGS} -fno-asynchronous-unwind-tables")
     set(COMMON_FLAGS "${COMMON_FLAGS} -fno-stack-protector")
     set(COMMON_FLAGS "${COMMON_FLAGS} -Wno-unused-function")
+    set(COMMON_FLAGS "${COMMON_FLAGS} -Wno-missing-field-initializers")
     set(COMMON_FLAGS "${COMMON_FLAGS} -fno-builtin")
     set(COMMON_FLAGS "${COMMON_FLAGS} -fvisibility=hidden")
     set(COMMON_FLAGS "${COMMON_FLAGS} -fdata-sections -ffunction-sections")
@@ -47,7 +48,6 @@ elseif(UNIX)
     set(COMMON_FLAGS "${COMMON_FLAGS} -mpopcnt -msse2 -mavx -mavx2 -mbmi -mbmi2")
     set(COMMON_FLAGS "${COMMON_FLAGS} -fno-tree-vectorize")
     set(COMMON_FLAGS "${COMMON_FLAGS} -Wall -Wextra")
-    set(COMMON_FLAGS "${COMMON_FLAGS} -std=c++11")
 
 	if(CMAKE_C_COMPILER_VERSION VERSION_GREATER 6)
 		set(COMMON_FLAGS "${COMMON_FLAGS} -fno-plt")
@@ -76,11 +76,15 @@ elseif(UNIX)
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -Ofast")
 
     set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELEASE} -g")
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -g")
 
     set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS}")
+    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
     set(CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL}")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
     set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
+
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
     set(CMAKE_EXE_LINKER_FLAGS_MINSIZEREL "-flto")
     set(CMAKE_EXE_LINKER_FLAGS_RELEASE "-flto")
