Add basic time keeping and maybe fix blunder-causing hash bug?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,9 @@ elseif(UNIX)
 endif()
 
 file(GLOB CH_SOURCES "ch/*")
+if(MSVC)
+    list(APPEND CH_SOURCES "ch/ch.natvis")
+endif()
 add_library(ch STATIC ${CH_SOURCES} ${EDITORCONFIG})
 add_library(ch_minimal STATIC ${CH_SOURCES} ${EDITORCONFIG})
 target_compile_definitions(ch_minimal PRIVATE -DCH_MINIMAL_SIZE)
