prepare for texel tuning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,11 @@ target_link_libraries(tune_sts ch_tunable)
 target_compile_definitions(tune_sts PUBLIC
     -DSTSFILE="${CMAKE_CURRENT_SOURCE_DIR}/stsrating/sts_all.epd")
 
+add_executable(tune_texel tune_texel.cpp ${EDITORCONFIG})
+target_link_libraries(tune_texel ch_tunable)
+target_compile_definitions(tune_texel PUBLIC
+    -DTEXELFILE="${CMAKE_CURRENT_SOURCE_DIR}/texel/texel.epd")
+
 add_executable(${PROJECT_NAME}_uci uci.cpp ${EDITORCONFIG})
 target_link_libraries(${PROJECT_NAME}_uci ch)
 if(UNIX)
